# python-chassis

./: .dockerignore  .env.tpl  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.basic  Dockerfile.prod  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
bizness/: performer.py  test_performer.py
chassis_app/: __init__.py  main.py  performer.py  test_performer.py
