[tool.black]
line-length = 120

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.isort]
profile = 'black'

[tool.poetry]
name = "python-chassis"
version = "0.0.1"
description = "Python Chassis code base"
authors = ["Shubham Chaudhary <shubham@chaudhary.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
loguru = "^0.5"
python-dotenv = "^0.19"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.1.3"
coverage = "^6.5.0"
pre-commit = "^2.20.0"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"

[tool.poetry.scripts]
inbound-tasks-api = "lineage.queue.inbound_tasks_api:api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
